RESOLVED FIXED271303
[WebGPU] Textures with size greater than 4096 are not cleared correctly
https://bugs.webkit.org/show_bug.cgi?id=271303
Summary [WebGPU] Textures with size greater than 4096 are not cleared correctly
Mike Wyrzykowski
Reported 2024-03-20 00:46:32 PDT
[WebGPU] Clear textures with a render pass instead of using the MTLBlitCommandEncoder
Attachments
Mike Wyrzykowski
Comment 1 2024-03-20 00:46:48 PDT
Mike Wyrzykowski
Comment 2 2024-03-20 01:23:53 PDT
EWS
Comment 3 2024-03-20 23:40:11 PDT
Committed 276446@main (f3577bf0e062): <https://commits.webkit.org/276446@main> Reviewed commits have been landed. Closing PR #26178 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.