[WebGPU] Textures with size greater than 4096 are not cleared correctly https://bugs.webkit.org/show_bug.cgi?id=271303 <radar://125068306>

Reviewed by Dan Glastonbury.

We can not use 16 bytes for all texture formats since that will
copy too many bytes and fail the validation layer for texture widths
greater than 4096 when the bytes per pixel is < 16.

* Source/WebGPU/WebGPU/CommandEncoder.mm:
(WebGPU::CommandEncoder::clearTexture):
* Source/WebGPU/WebGPU/Texture.h:
* Source/WebGPU/WebGPU/Texture.mm:
(WebGPU::Texture::bytesPerRow):

Canonical link: https://commits.webkit.org/276446@main